🏠 fix number overflow

--- a/mainPage/style.css
+++ b/mainPage/style.css
@@ -123,8 +123,8 @@ body {
     font-weight: bold;
     text-align: center;
     color: rgb(224, 224, 224);
-    min-width: 130px;
-    width: calc(50% - 10px);
+    min-width: 160px;
+    white-space: nowrap;
 }
 
 .container .header .box .detail > t::after {
